--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </style>
 </head>
 <body>
-    <a href="https://repani145.github.io/task.main/">Main_page</a>
+    <a href="https://repani145.github.io/task.main/"><h2>Main_page</h2></a>
     <h1 style="text-align: center; color: darkblue;">BOX_MODEL_PRINT_ON_SCREEN</h1>
     <div class="d1">
         <div class="d2">
